--- a/src/main/resources/templates/products/fiche_produit.html
+++ b/src/main/resources/templates/products/fiche_produit.html
@@ -9,7 +9,7 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
-    <style type="text/css">
+    <style src="text/css">
         @import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
 
 
@@ -25,14 +25,14 @@
 
         .card{
 
-            width: 380px;
-            border: none;
-            border-radius: 15px;
-            padding: 8px;
-            background-color: #fff;
-            position: relative;
-            height: 370px;
-        }
+             width: 380px;
+             border: none;
+             border-radius: 15px;
+             padding: 8px;
+             background-color: #fff;
+             position: relative;
+             height: 370px;
+         }
 
         .upper{
 
@@ -116,6 +116,7 @@
                 </div>
 
             </div>
+            <button> <a href="/products/">Home</a> </button>
         </div>
     </div>
 </div>
