--- a/src/main/resources/templates/clients/fiche_client.html
+++ b/src/main/resources/templates/clients/fiche_client.html
@@ -103,8 +103,8 @@
         </div>
 
         <div class="mt-5 text-center">
-            <h4 class="mb-0" th:text="${current_client.fname}"></h4>
-            <h4 class="mb-0" th:text="${current_client.lname}"></h4>
+            <h4 class="mb-0" th:text="${current_client.firstname}"></h4>
+            <h4 class="mb-0" th:text="${current_client.lastname}"></h4>
             <span class="text-muted d-block mb-2"></span>
             <!--        <button class="btn btn-primary btn-sm follow">Follow</button>
             -->
