show_all web OK traitement du edit/save OK del presque ok --> actualiser le tableau de user a la redirection vers /client/

--- a/src/main/resources/templates/clients/fiche_client.html
+++ b/src/main/resources/templates/clients/fiche_client.html
@@ -134,6 +134,7 @@
 
             </div>
             <button> <a href="/clients/">Home</a> </button>
+            <a th:href="@{|/clients/${current_client.id_client}/delete|}">Delete</a>
         </div>
     </div>
 </div>
