--- a/mspr/css/style.css
+++ b/mspr/css/style.css
@@ -1,7 +1,18 @@
+/* Réglages de base des pages */
+
 body {
     margin: 0;
     padding: 0;
     background-color: lightgray;
+}
+
+
+/* Section du header */
+
+header {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-family: 'Tilt Warp', cursive;
 }
 
 nav {
@@ -10,31 +21,6 @@ nav {
     width: 40em;
     margin-left: auto;
     margin-right: auto;
-}
-
-.pouet {
-    text-align: center;
-    font-family: 'PT Serif', serif;
-    font-size: 18px;
-    width: 13em;
-    height: 13em;
-    background-color: white;
-    border-radius: 15px;
-    border: rgba(48, 46, 46, 0.297) 3px solid;
-    margin: 1.5em;
-}
-
-.delog:hover,
-.pouet:hover {
-    transition: 0.4s;
-    opacity: 0.4;
-    cursor: pointer;
-}
-
-.title {
-    padding-top: 1em;
-    padding-bottom: 1em;
-    font-family: 'Tilt Warp', cursive;
 }
 
 .img {
@@ -62,14 +48,4 @@ p {
     text-align: center;
     font-family: 'PT Serif', serif;
     font-size: 25px;
-}
-
-.delog {
-    float: right;
-    margin-right: 1em;
-    height: 6em;
-    font-family: 'PT Serif', serif;
-    background-color: white;
-    border-radius: 15px;
-    border: rgba(48, 46, 46, 0.297) 3px solid;
 }
