--- a/mspr/css/table.css
+++ b/mspr/css/table.css
@@ -1,10 +1,12 @@
 .tabContainer {
     background-color: white;
     margin: auto;
+    margin-bottom: 1em;
     width: 75%;
     text-align: center;
     border-radius: 15px;
     border: rgba(48, 46, 46, 0.297) 3px solid;
+    padding-bottom: 1em;
 }
 
 .tabDesign {
