--- a/src/main/resources/templates/clients/client_list.html
+++ b/src/main/resources/templates/clients/client_list.html
@@ -1,43 +1,56 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
+
 <head>
-  <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
-  <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-          crossorigin="anonymous"></script>
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="../../static/img/logoFav.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/button.css">
+    <link rel="stylesheet" href="/css/table.css">
+
+
+    <title>Brakaas</title>
 </head>
+
 <body>
-<div class="container d-flex justify-content-center align-items-center">
-  <div class="card">
+    <header>
+        <a href="./index.html"><img class="img" src="/img/logo.jpg" alt=""></a>
+        <a href="../confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+        <a href="./index.html"><input class="delog" type="button" value="Retour accueil"></a>
+        <h1>Les Brakaas !</h1>
+    </header>
+    <p>Liste des clients :</p>
 
-    <table class="table">
-      <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
-        <th scope="col">Action</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="client: ${clients}">
-        <th scope="row" th:text="${client.id_client}" />
-        <td th:text="${client.firstname}" />
-        <td th:text="${client.lastname}" />
-        <td>
-          <a th:href="@{'/clients/' + ${client.id_client} + '/show'}">Show</a>
-          <a th:href="@{|/clients/${client.id_client}/edit|}">Edit</a>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-
-  </div>
-</div>
+    <div class="tabContainer">
+        <table class="tabDesign">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="client: ${clients}">
+                    <th scope="row" th:text="${client.id_client}" />
+                    <td th:text="${client.firstname}" />
+                    <td th:text="${client.lastname}" />
+                    <td>
+                        <a th:href="@{'/clients/' + ${client.id_client} + '/show'}">Show</a>
+                        <a th:href="@{|/clients/${client.id_client}/edit|}">Edit</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <a href="./addClient.html"><input class="authLog" type="button" value="Ajouter un client !"></a>
+    </div>
 </body>
-</html>
