--- a/src/main/resources/templates/clients/form_client.html
+++ b/src/main/resources/templates/clients/form_client.html
@@ -1,116 +1,62 @@
 <html>
 <head>
-  <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
-  <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-          crossorigin="anonymous"></script>
-  <style type="text/css">
-    @import
-    url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap")
-    ;
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    body {
-      background-color: #545454;
-      font-family: "Poppins", sans-serif;
-      font-weight: 300;
-    }
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-    .container {
-      height: 100vh;
-    }
+  <link rel="icon" type="image/x-icon" href="/img/logoFav.ico">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/button.css">
+  <link rel="stylesheet" href="/css/confirmation.css">
+  <link rel="stylesheet" href="/css/create.css">
 
-    .card {
-      width: 380px;
-      border: none;
-      border-radius: 15px;
-      padding: 8px;
-      background-color: #fff;
-      position: relative;
-      height: 370px;
-    }
-
-    .upper {
-      height: 100px;
-    }
-
-    .upper img {
-      width: 100%;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-
-    .user {
-      position: relative;
-    }
-
-    .profile img {
-      height: 80px;
-      width: 80px;
-      margin-top: 2px;
-    }
-
-    .profile {
-      position: absolute;
-      top: -50px;
-      left: 38%;
-      height: 90px;
-      width: 90px;
-      border: 3px solid #fff;
-      border-radius: 50%;
-    }
-
-    .follow {
-      border-radius: 15px;
-      padding-left: 20px;
-      padding-right: 20px;
-      height: 35px;
-    }
-
-    .stats span {
-      font-size: 29px;
-    }
-  </style>
+  <title>Brakaas</title>
 </head>
 <body>
 <div class="container d-flex justify-content-center align-items-center">
-  <div class="card">
+  <header>
+    <a href="./index.html"><img class="img" src="./img/logo.jpg"></a>
+    <a href="./confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+    <a href="./index.html"><input class="delog" type="button" value="Retour accueil"></a>
+    <h1>Les Brakaas !</h1>
+  </header>
+  <p>Création d'un client :</p>
 
+  <div class="formCommand">
     <form method="POST" th:action="@{/clients/save}" th:object="${current_client}">
-
-      <label>Client Name</label>
-      <input type="text" th:field="*{firstname}"/>
-      <br />
-      <label>Last Name</label>
-      <input type="text" th:field="*{lastname}" />
-      <br />
-      <label>Company Address</label>
-      <input type="text" th:field="*{company_address}"/>
-      <br />
-      <label>Company Name</label>
-      <input type="text" th:field="*{company_name}"/>
-      <br />
-      <label>Phone Number</label>
-      <input type="text" th:field="*{phone_number}"/>
-      <br />
-      <label>Email</label>
-      <input type="text" th:field="*{email_address}"/>
-      <br />
-      <label>SIRET</label>
-      <input type="text" th:field="*{SIRET_number}"/>
-      <br />
-      <input type="hidden" th:field="*{id_client}" />
-      <input type="submit" value="Submit" />
+      <label>Prénom du client :</label>
+      <input class="input" type="text" placeholder="Prenom du client" th:field="*{firstname}">
+      <br><br>
+      <label>Nom du client :</label>
+      <input class="input" type="text" placeholder="Nom du client" th:field="*{lastname}">
+      <br><br>
+      <label>Nom de l'entreprise :</label>
+      <input class="input" type="text" placeholder="Entreprise" th:field="*{company_name}">
+      <br><br>
+      <label>Adresse postale :</label>
+      <input class="input" type="text" placeholder="Adresse postale" th:field="*{company_address}">
+      <br><br>
+      <label>Adresse Mail :</label>
+      <input class="input" type="email" placeholder="Mail" th:field="*{email_address}">
+      <br><br>
+      <label>Numéro de téléphone :</label>
+      <input class="input" type="text" placeholder="Tel" th:field="*{phone_number}">
+      <br><br>
+      <label>SIRET :</label>
+      <input class="input" type="text" placeholder="Tel" th:field="*{SIRET_number}">
+      <br><br>
+      <input type="hidden" th:field="*{id_client}">
+      <input type="submit" value="Submit">
     </form>
-
   </div>
+
+
+
 </div>
 </body>
 </html>
-<!--
-
--->
