--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,24 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="../../static/img/logoFav.ico">
-    <link rel="stylesheet" href="../../static/css/style.css">
-    <link rel="stylesheet" href="../../static/css/button.css">
+    <link rel="icon" type="image/x-icon" href="../static/img/logoFav.ico">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/button.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
     <header>
-        <a href="./index.html"><img class="img" src="../../static/img/logo.jpg"></a>
-        <a href="../confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+        <a href="./index.html"><img class="img" src="../static/img/logo.jpg"></a>
+        <a href="confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
         <h1>Les Brakaas !</h1>
     </header>
     <p>Que souhaitez-vous faire ?</p>
 
     <nav>
-        <a href="../listingProduct.html"><input class="pouet" type="button" value="Gerer les produits"></a>
-        <a href="./client_list.html"><input class="pouet" type="button" value="Gerer les client"></a>
+        <a href="products/product_list.html"><input class="pouet" type="button" value="Gerer les produits"></a>
+        <a href="clients/client_list.html"><input class="pouet" type="button" value="Gerer les client"></a>
         <a href="../createCommande.html"><input class="pouet" type="button" value="Créer une commande"></a>
         <a href="../stats.html"><input class="pouet" type="button" value="Afficher les statistiques"></a>
     </nav>
