--- a/src/main/resources/templates/products/fiche_produit.html
+++ b/src/main/resources/templates/products/fiche_produit.html
@@ -1,123 +1,54 @@
 <html>
 <head>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-            crossorigin="anonymous">
-    <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous"></script>
-    <style src="text/css">
-        @import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-        body{
-            background-color:#545454;
-            font-family: "Poppins", sans-serif;
-            font-weight: 300;
-        }
+    <link rel="icon" type="image/x-icon" href="/img/logoFav.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/button.css">
+    <link rel="stylesheet" href="/css/table.css">
 
-        .container{
-            height: 100vh;
-        }
-
-        .card{
-
-             width: 380px;
-             border: none;
-             border-radius: 15px;
-             padding: 8px;
-             background-color: #fff;
-             position: relative;
-             height: 370px;
-         }
-
-        .upper{
-
-            height: 100px;
-
-        }
-
-        .upper img{
-
-            width: 100%;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-
-        }
-
-        .user{
-            position: relative;
-        }
-
-        .profile img{
-
-
-            height: 80px;
-            width: 80px;
-            margin-top:2px;
-
-
-        }
-
-        .profile{
-
-            position: absolute;
-            top:-50px;
-            left: 38%;
-            height: 90px;
-            width: 90px;
-            border:3px solid #fff;
-
-            border-radius: 50%;
-
-        }
-
-        .follow{
-
-            border-radius: 15px;
-            padding-left: 20px;
-            padding-right: 20px;
-            height: 35px;
-        }
-
-        .stats span{
-
-            font-size: 10px;
-        }
-    </style>
+    <title>Brakaas</title>
 </head>
 <body>
+<header>
+    <a href="../index.html"><img class="img" src="/img/logo.jpg"></a>
+    <a href="/confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+    <a href="../index.html"><input class="delog" type="button" value="Retour accueil"></a>
+    <h1>Les Brakaas !</h1>
+</header>
+<p>Fiche des clients :</p>
+
+
 <div class="container d-flex justify-content-center align-items-center">
-    <div class="card">
-        <div class="upper">
-            <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid">
-        </div>
-        <div class="user text-center">
-            <div class="profile">
-                <img src="https://i.imgur.com/JgYD2nQ.jpg" class="rounded-circle"
-                     width="80">
-            </div>
-        </div>
+    <div class="tabContainer">
+        <table class="tabDesign">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>availability</th>
+                <th>price</th>
+                <th>stock</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td th:text="${current_product.name}" ></td>
+                <td th:text="${current_product.availability}"></td>
+                <td th:text="${current_product.price}"></td>
+                <td th:text="${current_product.stock}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <a th:href="@{|/products/${current_product.id_product}/edit|}"><input class="authLog" type="button" value="Modifier le produit !"></a>
+        <a th:href="@{|/products/${current_product.id_product}/delete|}"><input class="authLog" type="button" value="Supprimer le produit !"></a>
 
-        <div class="mt-5 text-center">
-            <h4 class="mb-0" th:text="${current_product.name}"></h4>
-            <span class="text-muted d-block mb-2"></span>
-            <!--        <button class="btn btn-primary btn-sm follow">Follow</button>
-            -->
-            <div
-                    class="d-flex justify-content-between align-items-center mt-4 px-4">
-
-                <div class="stats">
-                    <h6 class="mb-0">Quantity</h6>
-                    <span th:text="${current_product.quantity}"></span>
-                </div>
-
-            </div>
-            <button> <a href="/products/">Home</a> </button>
-        </div>
     </div>
 </div>
 </body>
