--- a/mspr/css/table.css
+++ b/mspr/css/table.css
@@ -41,3 +41,9 @@ tbody tr:nth-child(even) {
 .quantitieChoice {
     width: 5em;
 }
+
+th {
+    background-color: rgb(58, 0, 67);
+    text-align: left;
+    color: rgb(255, 255, 255);
+}
