--- a/src/main/resources/templates/products/fiche_produit.html
+++ b/src/main/resources/templates/products/fiche_produit.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img class="img" src="/img/logo.jpg"></a>
+    <a href="../../"><img class="img" src="/img/logo.jpg" alt=""></a>
     <a href="/confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
-    <a href="../index.html"><input class="delog" type="button" value="Retour accueil"></a>
+    <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
     <h1>Les Brakaas !</h1>
 </header>
-<p>Fiche des clients :</p>
+<p>Fiche de produit :</p>
 
 
 <div class="container d-flex justify-content-center align-items-center">
