--- a/src/main/resources/templates/clients/form_client.html
+++ b/src/main/resources/templates/clients/form_client.html
@@ -20,9 +20,9 @@
 <body>
 <div class="container d-flex justify-content-center align-items-center">
   <header>
-    <a href="./index.html"><img class="img" src="./img/logo.jpg"></a>
+    <a href="../../"><img class="img" src="./img/logo.jpg"></a>
     <a href="./confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
-    <a href="./index.html"><input class="delog" type="button" value="Retour accueil"></a>
+    <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
     <h1>Les Brakaas !</h1>
   </header>
   <p>Création d'un client :</p>
