--- a/src/main/resources/templates/products/form_product.html
+++ b/src/main/resources/templates/products/form_product.html
@@ -1,96 +1,49 @@
 <html>
 <head>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-            crossorigin="anonymous">
-    <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous"></script>
-    <style type="text/css">
-        @import
-        url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap")
-        ;
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        body {
-            background-color: #545454;
-            font-family: "Poppins", sans-serif;
-            font-weight: 300;
-        }
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-        .container {
-            height: 100vh;
-        }
+    <link rel="icon" type="image/x-icon" href="/img/logoFav.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/button.css">
+    <link rel="stylesheet" href="/css/confirmation.css">
+    <link rel="stylesheet" href="/css/create.css">
 
-        .card {
-            width: 380px;
-            border: none;
-            border-radius: 15px;
-            padding: 8px;
-            background-color: #fff;
-            position: relative;
-            height: 370px;
-        }
-
-        .upper {
-            height: 100px;
-        }
-
-        .upper img {
-            width: 100%;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-        }
-
-        .user {
-            position: relative;
-        }
-
-        .profile img {
-            height: 80px;
-            width: 80px;
-            margin-top: 2px;
-        }
-
-        .profile {
-            position: absolute;
-            top: -50px;
-            left: 38%;
-            height: 90px;
-            width: 90px;
-            border: 3px solid #fff;
-            border-radius: 50%;
-        }
-
-        .follow {
-            border-radius: 15px;
-            padding-left: 20px;
-            padding-right: 20px;
-            height: 35px;
-        }
-
-        .stats span {
-            font-size: 29px;
-        }
-    </style>
+    <title>Brakaas</title>
 </head>
 <body>
 <div class="container d-flex justify-content-center align-items-center">
-    <div class="card">
+    <header>
+        <a href="../../"><img class="img" src="/img/logo.jpg" alt=""></a>
+        <a href="/confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+        <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
+        <h1>Les Brakaas !</h1>
+    </header>
+    <p>Création d'un produit :</p>
 
+    <div class="formCommand">
         <form method="POST" th:action="@{/products/save}" th:object="${current_product}">
-            <label>Product Name</label>
-            <input type="text" th:field="*{name}"/>
-            <br />
-            <label>Quantity</label>
-            <input type="text" th:field="*{quantity}" />
-            <input type="hidden" th:field="*{id}" />
-
-            <input type="submit" value="Submit" />
+            <label>Nom du produit</label>
+            <input class="input" type="text" placeholder="Nom du produit" th:field="*{name}">
+            <br><br>
+            <label>Disponibilité</label>
+            <input class="input" type="text" placeholder="Dsponibilité" th:field="*{availability}">
+            <br><br>
+            <label>Prix</label>
+            <input class="input" type="text" placeholder="Prix" th:field="*{price}">
+            <br><br>
+            <label>Stock</label>
+            <input class="input" type="text" placeholder="Stock" th:field="*{stock}">
+            <br><br>
+            <input type="hidden" th:field="*{id_product}">
+            <input type="submit" value="Submit">
         </form>
-
     </div>
 </div>
 </body>
