--- a/src/main/resources/templates/products/product_list.html
+++ b/src/main/resources/templates/products/product_list.html
@@ -21,9 +21,9 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img class="img" src="/img/logo.jpg" alt=""></a>
-    <a href="../confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
-    <a href="../index.html"><input class="delog" type="button" value="Retour accueil"></a>
+    <a href="../../"><img class="img" src="/img/logo.jpg" alt=""></a>
+    <a href="/confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+    <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
     <h1>Les Brakaas !</h1>
 </header>
 <p>Liste des clients :</p>
