--- a/src/main/resources/templates/confirmation/commandConf.html
+++ b/src/main/resources/templates/confirmation/commandConf.html
@@ -5,30 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="refresh" content="5; URL=../../"> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="../../static/img/logoFav.ico">
-    <link rel="stylesheet" href="../../static/css/style.css">
-    <link rel="stylesheet" href="../../static/css/confirmation.css">
-    <link rel="stylesheet" href="../../static/css/button.css">
+    <link rel="icon" type="image/x-icon" href="/img/logoFav.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/confirmation.css">
+    <link rel="stylesheet" href="/css/button.css">
 
     <title>Brakaas</title>
 </head>
 
 <body>
     <header>
-        <a href="./../index.html "><img class="img " src="../../static/img/logo.jpg "></a>
-        <a href="./../index.html"><input class="delog" type="button" value="Retour accueil"></a>
+        <a href="../../"><img class="img " src="/img/logo.jpg "></a>
+        <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
         <h1>Les Brakaas !</h1>
     </header>
 
     <div class="confDelog ">
         <h2>La commande est bien enregistrée !</h2>
-        <div class="bravo"><img src="../../static/img/bravo.gif "></div>
+        <div class="bravo"><img src="/img/bravo.gif "></div>
     </div>
 </body>
 
