--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,9 +25,9 @@
     <p>Que souhaitez-vous faire ?</p>
 
     <nav>
-        <a href="products/"><input class="pouet" type="button" value="Gerer les produits"></a>
-        <a href="clients/"><input class="pouet" type="button" value="Gerer les clients"></a>
-        <a href="./createCommande.html"><input class="pouet" type="button" value="Créer une commande"></a>
+        <a href="products/"><input class="pouet" type="button" value="Gérer les produits"></a>
+        <a href="clients/"><input class="pouet" type="button" value="Gérer les clients Créer une commande"></a>
+        <a href="orders/"><input class="pouet" type="button" value="Lister les commandes"></a>
         <a href="/stats.html"><input class="pouet" type="button" value="Afficher les statistiques"></a>
     </nav>
 </body>
