--- a/src/main/resources/templates/orders/order_list.html
+++ b/src/main/resources/templates/orders/order_list.html
@@ -1,46 +1,57 @@
 <html>
 <head>
-  <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
-  <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-          crossorigin="anonymous"></script>
-  </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+
+  <link rel="icon" type="image/x-icon" href="/img/logoFav.ico">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/button.css">
+  <link rel="stylesheet" href="/css/table.css">
+
+
+  <title>Brakaas</title>
 </head>
 <body>
+  <header>
+    <a href="../../"><img class="img" src="/img/logo.jpg" alt=""></a>
+    <a href="../confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+    <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
+    <h1>Les Brakaas !</h1>
+  </header>
 <div class="container d-flex justify-content-center align-items-center">
-  <div class="card">
-
-    <table class="table">
-      <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Order ID</th>
-        <th scope="col">Client ID</th>
-        <th scope="col">Product ID</th>
-        <th scope="col">Quantité</th>
-        <th scope="col">Prix Total</th>
-        <th scope="col">Date</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="order: ${orders}">
-        <th scope="row" th:text="${order.id_order}" />
-        <td th:text="${order.client_id}" />
-        <td th:text="${order.product_id}" />
-        <td th:text="${order.quantity}" />
-        <td th:text="${order.total}" />
-        <td th:text="${order.date}" />
-        <td>
-          <a th:href="@{'/orders/' + ${order.id_order} + '/show'}">Show</a>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+  <div class="tabContainer">
+    <table class="tabDesign">
+        <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Order ID</th>
+          <th scope="col">Client ID</th>
+          <th scope="col">Product ID</th>
+          <th scope="col">Quantité</th>
+          <th scope="col">Prix Total</th>
+          <th scope="col">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="order: ${orders}">
+          <th scope="row" th:text="${order.id_order}" />
+          <td th:text="${order.client_id}" />
+          <td th:text="${order.product_id}" />
+          <td th:text="${order.quantity}" />
+          <td th:text="${order.total}" />
+          <td th:text="${order.date}" />
+          <td>
+            <a th:href="@{'/orders/' + ${order.id_order} + '/show'}">Show</a>
+          </td>
+        </tr>
+        </tbody>
+      </table>
 
   </div>
 </div>
