Order list / create order OK show order en cours Ajout bdd client name et product name OK

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
         <a href="products/"><input class="pouet" type="button" value="Gérer les produits"></a>
         <a href="clients/"><input class="pouet" type="button" value="Gérer les clients Créer une commande"></a>
         <a href="orders/"><input class="pouet" type="button" value="Lister les commandes"></a>
-        <a href="/stats.html"><input class="pouet" type="button" value="Afficher les statistiques"></a>
+        <a href="/"><input class="pouet" type="button" value="Afficher les statistiques"></a>
     </nav>
 </body>
 </html>
