--- a/src/main/resources/templates/orders/fiche_order.html
+++ b/src/main/resources/templates/orders/fiche_order.html
@@ -1,8 +1,28 @@
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/x-icon" href="/img/logoFav.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/button.css">
+    <link rel="stylesheet" href="/css/table.css">
+
+    <title>Brakaas</title>
 </head>
 <body>
+<header>
+    <a href="../../"><img class="img" src="/img/logo.jpg" alt=""></a>
+    <a href="/confirmation/delogConf.html"><input class="delog" type="button" value="Deconnexion"></a>
+    <a href="../../"><input class="delog" type="button" value="Retour accueil"></a>
+    <h1>Les Brakaas !</h1>
+</header>
 <div class="container d-flex justify-content-center align-items-center">
     <div class="card">
         <div class="upper">
